--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
   },
   "homepage": "https://github.com/yuyunzhi/gululu-demo#readme",
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-hot-reload-api": "^2.3.1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.10.1"
+    "@vue/component-compiler-utils": "^2.2.0",
+    "parcel-bundler": "^1.10.1",
+    "sass": "^1.14.1",
+    "vue-template-compiler": "^2.5.17"
+  },
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
   }
 }
