--- a/package.json
+++ b/package.json
@@ -1,54 +1,33 @@
 {
-  "name": "yukaka",
-  "version": "0.0.4",
-  "description": "这是一个UI框架",
-  "main": "dist/index.js",
+  "name": "hello-world",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "parcel index.html --no-cache",
-    "dev-test": "parcel watch test/* --no-cache & karma start",
-    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yuyunzhi/y-components.git"
-  },
-  "keywords": [
-    "vue",
-    "ui"
-  ],
-  "author": "余韵之",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/yuyunzhi/y-components/issues"
-  },
-  "homepage": "https://github.com/yuyunzhi/y-components#readme",
   "dependencies": {
-    "vue": "^2.5.17",
-    "vue-hot-reload-api": "^2.3.1"
+    "vue": "^2.5.17"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "^2.2.0",
-    "chai": "^4.2.0",
-    "chai-spies": "^1.0.0",
-    "karma": "^3.0.0",
-    "karma-chai": "^0.1.0",
-    "karma-chai-spies": "^0.1.4",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
-    "karma-sinon-chai": "^2.0.2",
-    "mocha": "^5.2.0",
-    "node-sass": "^4.9.4",
-    "parcel-bundler": "^1.10.1",
-    "sass": "^1.14.1",
-    "sass-loader": "^7.1.0",
-    "sinon": "^6.3.4",
-    "sinon-chai": "^3.2.0",
-    "vue-template-compiler": "^2.5.17",
-    "vuepress": "^0.14.4"
+    "@vue/cli-plugin-babel": "^3.1.0",
+    "@vue/cli-plugin-unit-mocha": "^3.1.0",
+    "@vue/cli-service": "^3.1.0",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "chai": "^4.1.2",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "vue-template-compiler": "^2.5.17"
   },
-  "alias": {
-    "vue": "./node_modules/vue/dist/vue.common.js"
-  }
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
