--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@vue/cli-plugin-unit-mocha": "^3.1.0",
     "@vue/cli-service": "^3.1.0",
     "@vue/test-utils": "^1.0.0-beta.20",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "sinon": "^7.1.1",
+    "sinon-chai": "^3.3.0",
     "vue-template-compiler": "^2.5.17"
   },
   "postcss": {
