--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit"
+    "test": "cross-env BABEL_ENV=test karma start --single-run",
+    "test:unit": "cross-env BABEL_ENV=test karma start",
+    "test:unit:old": "vue-cli-service test:unit"
   },
   "dependencies": {
     "vue": "^2.5.17"
@@ -15,7 +17,16 @@
     "@vue/cli-plugin-unit-mocha": "^3.1.0",
     "@vue/cli-service": "^3.1.0",
     "@vue/test-utils": "^1.0.0-beta.20",
+    "babel-plugin-istanbul": "^5.1.0",
     "chai": "^4.2.0",
+    "cross-env": "^5.2.0",
+    "karma": "^3.1.3",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^3.0.5",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "sinon": "^7.1.1",
