--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit:old": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
