--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test": "cross-env BABEL_ENV=test karma start --single-run",
+    "test1": "cross-env BABEL_ENV=test karma start --single-run",
+    "test": "cross-env BABEL_ENV=test karma start",
     "test:unit": "cross-env BABEL_ENV=test karma start",
     "test:unit:old": "vue-cli-service test:unit"
   },
