--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build",
     "test": "cross-env BABEL_ENV=test karma start --single-run",
     "test:unit": "cross-env BABEL_ENV=test karma start",
-    "test:unit:old": "vue-cli-service test:unit"
+    "test:unit:old": "vue-cli-service test:unit",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "axios": "^0.18.0",
